# penguins-incus-platform

./: ARCHITECTURE.md  README.md
kapsule-incus-manager/: README.md
kapsule-incus-manager/.github/workflows/: ci.yml
kapsule-incus-manager/api/schema/: openapi.yaml
kapsule-incus-manager/cli/kim/cli/: main.py  provision_generic.py  provision_macos.py  provision_waydroid.py  provision_windows.py
kapsule-incus-manager/daemon/kim/api/rest/: app.py  provisioning_generic.py  provisioning_macos.py  provisioning_waydroid.py  provisioning_windows.py
kapsule-incus-manager/daemon/kim/profiles/: library.py
kapsule-incus-manager/daemon/kim/provisioning/: _base.py  generic.py  macos.py  waydroid.py  windows.py
kapsule-incus-manager/daemon/tests/: test_profiles.py  test_provisioning_plugins.py
kapsule-incus-manager/profiles/generic/: init.yaml  unshare-net.yaml
kapsule-incus-manager/profiles/macos/: macos-kvm.yaml
kapsule-incus-manager/profiles/waydroid/: waydroid.yaml
kapsule-incus-manager/profiles/windows/: gpu-mdev-virtual.yaml  windows-desktop-x86_64.yaml  windows-server-arm64.yaml
penguins-incus-platform/: .gitignore  README.md
penguins-incus-platform/.devcontainer/: devcontainer.json
penguins-incus-platform/.github/workflows/: ci.yml
penguins-incus-platform/api/schema/: openapi.yaml
penguins-incus-platform/api/schema/dbus/: org.PenguinsIncusPlatform.xml
penguins-incus-platform/cli/: pyproject.toml
penguins-incus-platform/cli/penguins_incus/cli/: client.py  main.py  provision_generic.py  provision_macos.py  provision_waydroid.py  provision_windows.py
penguins-incus-platform/cli/tests/: test_cli.py
penguins-incus-platform/daemon/: pyproject.toml
penguins-incus-platform/daemon/data/: kim.service  kim.socket
penguins-incus-platform/daemon/penguins_incus/: events.py  main.py  resources.py
penguins-incus-platform/daemon/penguins_incus/api/dbus/: service.py
penguins-incus-platform/daemon/penguins_incus/api/rest/: app.py  cluster.py  events.py  images.py  instances.py  networks.py  operations.py  profiles.py  projects.py  provisioning.py  provisioning_generic.py  provisioning_macos.py  provisioning_waydroid.py  provisioning_windows.py  remotes.py  storage.py
penguins-incus-platform/daemon/penguins_incus/incus/: client.py
penguins-incus-platform/daemon/penguins_incus/provisioning/: _base.py  compose.py  generic.py  macos.py  waydroid.py  windows.py
penguins-incus-platform/daemon/tests/: test_events.py  test_incus_client.py  test_profiles.py  test_provisioning.py  test_provisioning_plugins.py  test_resources.py
penguins-incus-platform/profiles/generic/: base.yaml  gui.yaml  nvidia.yaml  rootless.yaml
penguins-incus-platform/profiles/waydroid/: waydroid.yaml
penguins-incus-platform/profiles/windows/: gpu-looking-glass.yaml  gpu-sriov.yaml  gpu-vfio-passthrough.yaml  windows-desktop-arm64.yaml  windows-server-x86_64.yaml
penguins-incus-platform/ui-qml/: CMakeLists.txt
penguins-incus-platform/ui-qml/app/: CMakeLists.txt
penguins-incus-platform/ui-qml/app/qml/: Main.qml
penguins-incus-platform/ui-qml/app/qml/components/: ConfirmDialog.qml  CreateInstanceDialog.qml  StatusBadge.qml
penguins-incus-platform/ui-qml/app/qml/pages/: ClusterPage.qml  ContainersPage.qml  EventsPage.qml  ImagesPage.qml  NetworksPage.qml  OperationsPage.qml  ProfilesPage.qml  ProjectsPage.qml  RemotesPage.qml  StoragePage.qml  VMsPage.qml
penguins-incus-platform/ui-qml/app/src/: main.cpp
penguins-incus-platform/ui-qml/lib/: CMakeLists.txt
penguins-incus-platform/ui-qml/lib/src/: containersmodel.cpp  containersmodel.h  eventsource.cpp  eventsource.h  imagesmodel.cpp  imagesmodel.h  networksmodel.cpp  networksmodel.h  pipclient.cpp  pipclient.h  profilesmodel.cpp  profilesmodel.h  storagemodel.cpp  storagemodel.h  types.h
penguins-incus-platform/ui-web/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
penguins-incus-platform/ui-web/src/: App.tsx
penguins-incus-platform/ui-web/src/api/: client.ts
penguins-incus-platform/ui-web/src/components/: ConfirmDialog.tsx  PageHeader.tsx  StatusBadge.tsx
penguins-incus-platform/ui-web/src/hooks/: useApi.ts  useEvents.ts
penguins-incus-platform/ui-web/src/pages/: ClusterPage.tsx  ContainersPage.tsx  EventsPage.tsx  ImagesPage.tsx  NetworksPage.tsx  OperationsPage.tsx  ProfilesPage.tsx  ProjectsPage.tsx  RemotesPage.tsx  StoragePage.tsx  VMsPage.tsx
penguins-incus-platform/ui-web/src/test/: ConfirmDialog.test.tsx  ContainersPage.test.tsx  NetworksPage.test.tsx  RemotesPage.test.tsx  StatusBadge.test.tsx
