[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "penguins-incus"
version = "0.1.0"
description = "Penguins-Incus-Platform CLI"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff",
    "mypy",
]

[project.scripts]
penguins-incus = "penguins_incus.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["penguins_incus"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
