[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "penguins-incus-daemon"
version = "0.1.0"
description = "Penguins-Incus-Platform system daemon"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "websockets>=12",
    "dasbus>=1.7",
    "PyGObject>=3.44",
    "pyyaml>=6",
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx",
    "ruff",
    "mypy",
]

[project.scripts]
penguins-incus-daemon = "penguins_incus.main:main"

[tool.hatch.build.targets.wheel]
packages = ["penguins_incus"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
